deploy/kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drawio
  labels:
    app: draw.io
    version: 12.0.0
---
