deploy/kubernetes/manifests/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drawio
  namespace: drawio
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: draw.io
    spec:
      containers:
        - image: index.docker.io/fjudith/draw.io:10.9.2
          imagePullPolicy: IfNotPresent
          name: drawio
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          ports:
            - containerPort: 8080
---
